Добавил изменения цвета SVG

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "start": "browser-sync start -s -f '*' "
+  },
   "dependencies": {
-    "@glidejs/glide": "^3.5.2"
+    "@glidejs/glide": "^3.5.2",
+    "gulp": "^4.0.2"
   }
 }
